# LLMLibrary

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
llm_library/: .env.example  AnthropicMockClient.py  LLMClient.py  OpenAIMockClient.py  __main__.py
test_llm/: AnthropicMockClient.py  LLMClient.py  OpenAIMockClient.py
tests/: test_AnthropicMockClient.py  test_OpenAIMockClient.py
